# tbnu

./: .gitignore  .replit  README.md  files.txt  pyproject.toml  setup.py  tbnu
main/: Database.py  Handler.py  db.pkl
tbnu/: Database.py  Handler.py  Note.py  __init__.py  __main__.py  logos.py
tbnu/aesthetics/: colors.py  logos.py
tbnu/db/: db.pkl
